# checkboxes

backend/: .dockerignore  .gitignore  Dockerfile  api.py  fly.toml  pyproject.toml
backend/lib/: _binary_packer.pyx  binary_packer.py
frontend/: bun.lockb  package.json
frontend/src/lib/: binary.ts  commit.ts  config-public.ts  config.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/canvas/: +page.svelte
