[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
# readme = "README.md"
# packages = [
#    { include = "lib" }
# ]

[tool.poetry.dependencies]
python = "^3.12"
anyio = "^4.4.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
fastapi = {extras = ["standard"], version = "^0.112.1"}
websockets = "^13.0"
bitarray = "^2.9.2"


[tool.poetry.group.dev.dependencies]
cython = "^3.0.11"
setuptools = "^73.0.1"
ipython = "^8.26.0"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
